--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     margin: 0px;
 }
 
-#welcomeScreen{
+#welcomeScreen ,#resultScreen{
     width: 100%;
     height: 100vh;
     display: flex;
@@ -59,7 +59,7 @@
     cursor: pointer;
     text-transform: uppercase;
 }
-#usernameError{
+.error{
     color: red;
     padding: 5px;
 }
@@ -82,7 +82,7 @@
     flex-direction: column;
     justify-content: end;
 }
-#levelArea {
+.levelArea {
     width: 25%;
     height: 100vh;
     display: flex;
@@ -90,6 +90,10 @@
     justify-content: center;
     background-color: #100241;
     color: white;
+}
+#levelList {
+    padding: 20px;
+    list-style: none;
 }
 .level {
     display: flex;
@@ -107,10 +111,7 @@
     font-size: 20px;
     font-weight: 300;
 }
-#levelList {
-    padding: 20px;
-    list-style: none;
-}
+
 .level.active {
     background-color: teal;
 }
@@ -130,4 +131,42 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+#answers {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.answer {
+    width: 38%;
+    padding: 10px;
+    text-align: center;
+    background: linear-gradient(#100241, black);
+    border: 2px solid white;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 0 10px 20px 10px;
+    cursor: pointer;
+}
+.answer:hover {
+    background: mediumblue;
+}
+
+#resultScreen h1 {
+    padding: 20px;
+}
+
+#resultScreen h3 {
+    padding: 10px;
+}
+
+#timer {
+    font-weight: 500;
+    color: white;
+    padding: 5px;
 }
